// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/rhs_card/RhsCard should match on post when no plugin defining card types 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <div
        className="info-card"
      >
        <Connect(Markdown) />
      </div>
      <div
        className="d-flex post-card--info"
      >
        <div
          className="post-card--post-by overflow--ellipsis"
        >
          <FormattedMessage
            defaultMessage="Message by {avatar} {user}"
            id="rhs_card.message_by"
            values={
              Object {
                "avatar": <Connect(PostProfilePicture)
                  compactDisplay={false}
                  post={
                    Object {
                      "channel_id": "channelID",
                      "create_at": 1542994995740,
                      "delete_at": 1543254195740,
                      "edit_at": 1543167795740,
                      "hashtags": "#abc",
                      "id": "123",
                      "is_pinned": false,
                      "message": "test",
                      "metadata": Object {
                        "embeds": Array [],
                        "emojis": Array [],
                        "files": Array [],
                        "images": Object {},
                        "reactions": Array [],
                      },
                      "original_id": "originalID",
                      "parent_id": "parentID",
                      "pending_post_id": "pendingPostID",
                      "props": Object {},
                      "reply_count": 0,
                      "root_id": "rootID",
                      "type": "system_join_channel",
                      "update_at": 1543081395740,
                      "user_id": "userID",
                    }
                  }
                  userId="userID"
                />,
                "user": <Connect(UserProfile)
                  disablePopover={true}
                  hideStatus={true}
                  userId="userID"
                />,
              }
            }
          />
        </div>
        <div
          className="post-card--view-post"
        >
          <Link
            className="post__permalink"
            onClick={[Function]}
            to="team/url/pl/123"
          >
            <FormattedMessage
              defaultMessage="Jump"
              id="rhs_card.jump"
              values={Object {}}
            />
          </Link>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/rhs_card/RhsCard should match on post when plugin defining card types don't match with the post type 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <div
        className="info-card"
      >
        <Connect(Markdown) />
      </div>
      <div
        className="d-flex post-card--info"
      >
        <div
          className="post-card--post-by overflow--ellipsis"
        >
          <FormattedMessage
            defaultMessage="Message by {avatar} {user}"
            id="rhs_card.message_by"
            values={
              Object {
                "avatar": <Connect(PostProfilePicture)
                  compactDisplay={false}
                  post={
                    Object {
                      "channel_id": "channelID",
                      "create_at": 1542994995740,
                      "delete_at": 1543254195740,
                      "edit_at": 1543167795740,
                      "hashtags": "#abc",
                      "id": "123",
                      "is_pinned": false,
                      "message": "test",
                      "metadata": Object {
                        "embeds": Array [],
                        "emojis": Array [],
                        "files": Array [],
                        "images": Object {},
                        "reactions": Array [],
                      },
                      "original_id": "originalID",
                      "parent_id": "parentID",
                      "pending_post_id": "pendingPostID",
                      "props": Object {},
                      "reply_count": 0,
                      "root_id": "rootID",
                      "type": "system_join_channel",
                      "update_at": 1543081395740,
                      "user_id": "userID",
                    }
                  }
                  userId="userID"
                />,
                "user": <Connect(UserProfile)
                  disablePopover={true}
                  hideStatus={true}
                  userId="userID"
                />,
              }
            }
          />
        </div>
        <div
          className="post-card--view-post"
        >
          <Link
            className="post__permalink"
            onClick={[Function]}
            to="team/url/pl/123"
          >
            <FormattedMessage
              defaultMessage="Jump"
              id="rhs_card.jump"
              values={Object {}}
            />
          </Link>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/rhs_card/RhsCard should match on post when plugin defining card types match with the post type 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <component
        post={
          Object {
            "channel_id": "channelID",
            "create_at": 1542994995740,
            "delete_at": 1543254195740,
            "edit_at": 1543167795740,
            "hashtags": "#abc",
            "id": "123",
            "is_pinned": false,
            "message": "test",
            "metadata": Object {
              "embeds": Array [],
              "emojis": Array [],
              "files": Array [],
              "images": Object {},
              "reactions": Array [],
            },
            "original_id": "originalID",
            "parent_id": "parentID",
            "pending_post_id": "pendingPostID",
            "props": Object {},
            "reply_count": 0,
            "root_id": "rootID",
            "type": "system_join_channel",
            "update_at": 1543081395740,
            "user_id": "userID",
          }
        }
      />
      <div
        className="d-flex post-card--info"
      >
        <div
          className="post-card--post-by overflow--ellipsis"
        >
          <FormattedMessage
            defaultMessage="Message by {avatar} {user}"
            id="rhs_card.message_by"
            values={
              Object {
                "avatar": <Connect(PostProfilePicture)
                  compactDisplay={false}
                  post={
                    Object {
                      "channel_id": "channelID",
                      "create_at": 1542994995740,
                      "delete_at": 1543254195740,
                      "edit_at": 1543167795740,
                      "hashtags": "#abc",
                      "id": "123",
                      "is_pinned": false,
                      "message": "test",
                      "metadata": Object {
                        "embeds": Array [],
                        "emojis": Array [],
                        "files": Array [],
                        "images": Object {},
                        "reactions": Array [],
                      },
                      "original_id": "originalID",
                      "parent_id": "parentID",
                      "pending_post_id": "pendingPostID",
                      "props": Object {},
                      "reply_count": 0,
                      "root_id": "rootID",
                      "type": "system_join_channel",
                      "update_at": 1543081395740,
                      "user_id": "userID",
                    }
                  }
                  userId="userID"
                />,
                "user": <Connect(UserProfile)
                  disablePopover={true}
                  hideStatus={true}
                  userId="userID"
                />,
              }
            }
          />
        </div>
        <div
          className="post-card--view-post"
        >
          <Link
            className="post__permalink"
            onClick={[Function]}
            to="team/url/pl/123"
          >
            <FormattedMessage
              defaultMessage="Jump"
              id="rhs_card.jump"
              values={Object {}}
            />
          </Link>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/rhs_card/RhsCard should match when no post is selected 1`] = `<div />`;
